# vuejs-fastapi-ts-project-template

./: .aidigestignore  .cursorrules  .gitignore  README.md  captain-definition-backend  captain-definition-frontend
backend/: .env.template  pyproject.toml  requirements.txt  uvrun.sh
backend/src/: main.py
backend/templates/: index.html
frontend/: .env.template  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.vue  style.css
frontend/src/assets/: index.css
frontend/src/router/: index.ts
frontend/src/views/: HomeView.vue
